# hurima-frontend

./: .gitignore  Dockerfile  Item.go  README.md  amplify.yml  docker-compose.yaml  docker-compose.yml  errors.go  eslintrc.json  go.mod  go.sum  index.html  package-lock.json  package.json  pom.xml  schema.sql  schema_new.sql  service.go  service_impl.go  skaffold.yaml  tsconfig.json  user.go  util.go  vite.config.ts
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.metals/: metals.lock.db  metals.mv.db
auth-server/: app.ts  index.ts  package-lock.json  package.json
backend/: CHANGELOG.md  Cargo.toml  README.md  backend.cabal  package.yaml  stack.yaml
backend/config/: keter.yml  routes.yesodroutes  settings.yml  test-settings.yml
backend/src/: main.rs
backend/src/Handler/: EmailLogin.hs  Greet.hs  Product.hs  Register.hs
backend/templates/: homepage.hamlet  verification-email.hamlet
client/: package-lock.json  webpack.alias.ts
client/public/: index.html  manifest.json
client/src/: App.tsx
cmd/: go_build_hurima
cmd/flema/: main.go
documentation/: send_email_from_scala_app.md
email/: email.go  smtp.go  template.go
frontend/: package-lock.json  package.json  tsconfig.json
public/: index.html
security/: jwt_util.go
server/: .gitignore  ChangeLog.md  build.sbt  go.mod  package.yaml  server.cabal  service.go  service_impl.go  stack.yaml
src/: App.tsx  aws-axports.ts  index.css  index.tsx  store.ts
templates/: activate-account.tmpl
testutil/: test_util.go
transport/: service.go
web/: .gitignore  package-lock.json  package.json
(+332 files in other folders)
