[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
postgres = "0.19.4"
actix-session = "0.7.2"
serde = "1.0.152"
regex = "1.7.1"
log = "0.4.17"
config = "0.13.3"
